# cpp-iot-sensor-simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: MqttClient.h  Sensor.h
src/: MqttClient.cpp  Sensor.cpp  main.cpp
